--- a/index.html
+++ b/index.html
@@ -148,19 +148,19 @@
             </div>
 
             <div class="career-item">
-                <img src="assets/Group 5 (1).png" alt="">
+                <img src="assets/Group 6 (1).png" alt="">
 
                 <div>
-                    <p> BlueMoon provides you with a platform to connect with customers and grow your business.</p>
+                    <p> BlueMoon provides a platform for fabric sellers to showcase their products and connect with customers.</p>
                 </div>
             </div>
 
 
             <div class="career-item">
-                <img src="assets/Group 5 (1).png" alt="">
+                <img src="assets/Group 7.png" alt="">
 
                 <div>
-                    <p> BlueMoon provides you with a platform to connect with customers and grow your business.</p>
+                    <p> BlueMoon users trust our network of reliable dry cleaners to keep their wardrobe looking pristine.</p>
                 </div>
             </div>
         </div>
