--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             </ul>
 
             <button>Get Started</button>
+
+            <svg class="open" width="21" height="24" viewBox="0 0 21 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1.5 13.5C0.670312 13.5 0 14.1703 0 15C0 15.8297 0.670312 16.5 1.5 16.5H19.5C20.3297 16.5 21 15.8297 21 15C21 14.1703 20.3297 13.5 19.5 13.5H1.5ZM1.5 7.5C0.670312 7.5 0 8.17031 0 9C0 9.82969 0.670312 10.5 1.5 10.5H19.5C20.3297 10.5 21 9.82969 21 9C21 8.17031 20.3297 7.5 19.5 7.5H1.5Z" fill="black"/>
+                </svg>                
         </header>
 
 
@@ -406,6 +410,15 @@
                                                             
                 </div>
             </div>
+        </div>
+
+        <div class="mobile-footer">
+            <div class="btn">
+                <button>Download App</button>
+                <input type="text" placeholder="subscribe">
+            </div>
+
+            <p>© 2024 <span> Bluemoon</span>. All Rights Reserved.</p>
         </div>
     </footer>
    
