add pagination indicator

--- a/index.html
+++ b/index.html
@@ -169,6 +169,11 @@
             </div>
         </div>
 
+    <div class="career-pagi">
+        <div class="active"></div>
+        <div></div>
+        <div></div>
+    </div>
 
     </div>
 
@@ -283,6 +288,13 @@
                 </div>
             </div>
 
+        </div>
+
+
+        <div class="career-pagi">
+            <div class="active"></div>
+            <div></div>
+            <div></div>
         </div>
 
         
